Document PPDG/src/objects/IBBPaymentType__c.object
<CustomObject>
    <description>C00169</description>
    <fields>
        <fullName>Account_Reference_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Reference Information</label>
        <referenceTo>Account_Reference_Information__c</referenceTo>
        <relationshipName>IBBPaymentTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentTypeMethod__c</fullName>
        <label>PaymentTypeMethod</label>
        <picklist>
            <picklistValues>
                <fullName>CARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERNAL TRANSFER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXTERNAL TRANSFER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypeAmount__c</fullName>
        <label>TypeAmount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TypeDescription__c</fullName>
        <label>TypeDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PaymentType</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PaymentType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PaymentTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>